Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -829,6 +829,9 @@ video.play();
                                                               <span class="image main"><img src="https://tv.vitaforas.de/1.jpg" alt="" /></span>
 
 
+       <p>
+</p>
+       🔧 Hosted in Germany 🇩🇪
  <p>         
 </p>
 
@@ -951,7 +954,15 @@ Hosted in Germany © by vitaforas
                                                                 <h2 class="major">FSK 18</h2>
                                                                   <span class="image main"><img src="https://tv.vitaforas.de/1.jpg" alt="" /></span>
 
+       <p>
 
+</p>
+        <p>
+
+
+Hosted in Germany © by vitaforas
+</p>
+        <p>
 
 <a href="http://tv.vitaforas.de/stumm.mp4">
 <img src="http://tv.vitaforas.de/stumm.jpg" alt="4" width="100%" height="auto"></a>
