Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -456,9 +456,7 @@ Robert Bilott ist seit kurzem Partner in einer renommierten Anwaltskanzlei in Ci
      <a href="https://tv.vitaforas.de/fred.mp4">
 <img src="https://tv.vitaforas.de/freddy.jpg" alt="33" width="50" height="60"></a>
 
-     <a href="https://tv.vitaforas.de/s1.mp4">
-<img src="https://tv.vitaforas.de/s1.jpg" alt="34" width="50" height="60"></a>
-
+     
  <p>         
 </p>
 
@@ -889,7 +887,10 @@ Durch einen verrückten Zufall werden der neurotische Kragenbär Patrick (Stimme
 </p>
 In „Baymax – Robowahobu in Serie“ erlebt der 14-jährige Hiro Hamada immer wieder ungeheuerliche Abenteuer. Stets an seiner Seite: der namensgebende Roboter Baymax. 
 
-<p>         
+<p>   
+<a href="https://tv.vitaforas.de/s1.mp4">
+<img src="https://tv.vitaforas.de/s1.jpg" alt="34" width="100%" height="auto"></a>
+      
 </p>
      <a href="https://tv.vitaforas.de/alles.mp4">
 <img src="https://tv.vitaforas.de/alles.jpg" alt="6" width="100%" height="auto"></a>
