Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -914,25 +914,25 @@ Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, W
 
 
         <p>
-Link : <a href="https://wnhhhdwbm37fvoxqgr55z7beuxivlndyzr6xsruh7hp2e52ytvofsiad.onion/motel.mp4">
-<img src="https://motel.jpg" alt="1" width="100%" height="auto"></a>      
 </p>
-        <p>
-
-</p>
-        <p>
 
 
-Hosted in Germany © by vitaforas
-</p>
         <p>
 </p>
 
 
 
+        <p>
+☁️ Hosted © by vitaforas 🛡️
+</p>
 
         <p>
+</p>
 
+
+
+
+        <p>
 </p>
 
 
