Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -323,11 +323,6 @@ Ein Baby wird vom Weihnachtsmann irrtümlich mit zum Nordpol genommen, als diese
      <a href="https://tv.vitaforas.de/fee.mp4">
 <img src="https://tv.vitaforas.de/fee.jpg" alt="114" width="100%" height="auto"></a>
 
- <p>         
-</p>
-     <a href="https://tv.vitaforas.de/repo.mp4">
-<img src="https://tv.vitaforas.de/repo.jpg" alt="142" width="100%" height="auto"></a></li>
-USA, 2025: Jeder kann sein Leben durch künstliche Organe verlängern. Der einzige Haken: Wer die Raten für seine Ersatzteile schuldig bleibt, bekommt Besuch von den "Repo Men" - gnadenlosen Eintreibern, die das unbezahlte Organ im Auftrag des Herstellers zurückholen ... ohne Rücksicht auf Verluste! Remy (Jude Law) ist einer der besten Repo Men. Doch nach einer kostspieligen Herztransplantation wird der Jäger zum Gejagten: Ausgerechnet seinen gnadenlosen Partner Jake (Oscar®-Preisträger Forest Whitaker) hetzt man Remy auf den Hals, um das teure Hightech-Organ zurück zu bekommen. Gemeinsam mit seiner Ex-Frau Beth kämpft er sich durch eine bizarre Welt voller seltsamer Freunde und skrupelloser Feinde, um die Drahtzieher des Organhandels zur Strecke zu bringen ... Mit Starbesetzung und erstklassigen Special Effects entstand ein actionreicher Sci-Fi-Thriller, den sein makabrer Humorzu einem abgründigen Genre-Highlight macht.
      </ul>
 
 
@@ -490,13 +485,7 @@ Das Jahr 2274 wirkt auf den ersten Blick idyllisch - es gibt nur einen Haken: di
      <a href="https://tv.vitaforas.de/solas.mp4">
 <img src="https://tv.vitaforas.de/solas.jpg" alt="2" width="100%" height="auto"></a>
 
-     <a href="https://tv.vitaforas.de/bär.mp4">
-<img src="https://tv.vitaforas.de/bär.jpg" alt="10" width="100%" height="auto"></a>
-</li>
-
-     <a href="https://tv.vitaforas.de/ninja.mp4">
-<img src="https://tv.vitaforas.de/ninja.jpg" alt="1" width="100%" height="auto"></a>
-
+   
      <a href="https://tv.vitaforas.de/John1.mp4">
 <img src="https://tv.vitaforas.de/John1.png" alt="39" width="100%" height="auto"></a>
 
@@ -900,6 +889,15 @@ Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem 
  <p>         
 </p>
 
+  <a href="https://tv.vitaforas.de/bär.mp4">
+<img src="https://tv.vitaforas.de/bär.jpg" alt="10" width="100%" height="auto"></a>
+
+
+ <p>         
+</p>
+     <a href="https://tv.vitaforas.de/ninja.mp4">
+<img src="https://tv.vitaforas.de/ninja.jpg" alt="1" width="100%" height="auto"></a>
+
 
 
 <p> Mail: kontakt@vitaforas.de
@@ -1005,6 +1003,12 @@ Nachdem er als Jigsaw schon mehrere Menschen mittels grausamer Folterfallen verm
 Johnny ist halb Mensch, halb Zombie – ein rares Hybridwesen, das in seinem Blut ein mögliches Heilmittel gegen die weltweit grassierende Untoten-Epidemie tragen könnte. 
 
 
+ <p>         
+</p>
+     <a href="https://tv.vitaforas.de/repo.mp4">
+<img src="https://tv.vitaforas.de/repo.jpg" alt="142" width="100%" height="auto"></a>
+
+USA, 2025: Jeder kann sein Leben durch künstliche Organe verlängern. Der einzige Haken: Wer die Raten für seine Ersatzteile schuldig bleibt, bekommt Besuch von den "Repo Men" - gnadenlosen Eintreibern, die das unbezahlte Organ im Auftrag des Herstellers zurückholen ... ohne Rücksicht auf Verluste! Remy (Jude Law) ist einer der besten Repo Men. Doch nach einer kostspieligen Herztransplantation wird der Jäger zum Gejagten: Ausgerechnet seinen gnadenlosen Partner Jake (Oscar®-Preisträger Forest Whitaker) hetzt man Remy auf den Hals, um das teure Hightech-Organ zurück zu bekommen. Gemeinsam mit seiner Ex-Frau Beth kämpft er sich durch eine bizarre Welt voller seltsamer Freunde und skrupelloser Feinde, um die Drahtzieher des Organhandels zur Strecke zu bringen ... Mit Starbesetzung und erstklassigen Special Effects entstand ein actionreicher Sci-Fi-Thriller, den sein makabrer Humorzu einem abgründigen Genre-Highlight macht.
  <p>         
 </p>
      <a href="https://tv.vitaforas.de/Hypnotic.mp4">
