Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -455,11 +455,6 @@ Zwei Auftragskiller (Dexter Fletcher und Max Irons) machen sich sofort an die Ar
 
  <p>         
 </p>
-     <a href="https://tv.vitaforas.de/JohnnyZ.mp4">
-<img src="https://tv.vitaforas.de/JohnnyZ.jpg" alt="38" width="50" height="60"></a>
-
- <p>         
-</p>
      <a href="https://tv.vitaforas.de/run.mp4">
 <img src="https://tv.vitaforas.de/run.jpg" alt="2" width="100%" height="auto"></a>
 
@@ -474,18 +469,7 @@ Das Jahr 2274 wirkt auf den ersten Blick idyllisch - es gibt nur einen Haken: di
      <a href="https://tv.vitaforas.de/solas.mp4">
 <img src="https://tv.vitaforas.de/solas.jpg" alt="2" width="100%" height="auto"></a>
 
-   
-     <a href="https://tv.vitaforas.de/John1.mp4">
-<img src="https://tv.vitaforas.de/John1.png" alt="39" width="100%" height="auto"></a>
-
-     <a href="https://tv.vitaforas.de/john2.mp4">
-<img src="https://tv.vitaforas.de/John2.png" alt="40" width="100%" height="auto"></a>
-
-     <a href="https://tv.vitaforas.de/john3.mp4">
-<img src="https://tv.vitaforas.de/john3.jpg" alt="41" width="100%" height="auto"></a>
-
-     <a href="https://tv.vitaforas.de/John4.mp4">
-<img src="https://tv.vitaforas.de/John4.png" alt="42" width="100%" height="auto"></a></li>
+   </li>
      </ul>
 
 
@@ -499,9 +483,6 @@ Das Jahr 2274 wirkt auf den ersten Blick idyllisch - es gibt nur einen Haken: di
 
 
 Sci-Fi:
-
- <p>         
-</p>
 
 <ul>
      <li><a href="https://tv.vitaforas.de/f.mp4">
@@ -531,12 +512,6 @@ Zwei Surrogates werden vor einem Nachtclub zerstört. Die Behörden stufen den V
 <img src="https://tv.vitaforas.de/matrix.jpg" alt="2" width="50" height="60"></a>
      <a href="https://tv.vitaforas.de/fut.mp4">
 <img src="https://tv.vitaforas.de/fut.jpg" alt="2" width="50" height="60"></a>
-
- <p>         
-</p>
-     <a href="https://tv.vitaforas.de/fred.mp4">
-<img src="https://tv.vitaforas.de/freddy.jpg" alt="9" width="50" height="60"></a>
-
 
  <p>         
 </p>
@@ -1017,7 +992,7 @@ Patrice Capullo (Uma Thurman) hat ein Problem: Ihre Kunstgalerie wirft kein Geld
  <p>
 </p>
   <a href="https://tv.vitaforas.de/fred.mp4">
-<img src="https://tv.vitaforas.de/freddy.jpg" alt="33" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/freddy.jpg" alt="33" width="100%" height="auto"></a>
 
         <p>
 🪄🚧🔧
