Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -443,8 +443,6 @@ Der Avatar Aang ist der Einzige seiner Generation, der es vermag, die vier Eleme
 
 Why!Ask:
 
- <p>         
-</p>
 <ul>
      <li><a href="https://tv.vitaforas.de/terminal.mp4">
 <img src="https://tv.vitaforas.de/terminal.jpg" alt="37" width="100%" height="auto"></a>
@@ -512,11 +510,7 @@ Zwei Surrogates werden vor einem Nachtclub zerstört. Die Behörden stufen den V
 
  <p>         
 </p>
-     <a href="https://tv.vitaforas.de/maze.mp4">
-<img src="https://tv.vitaforas.de/mazerunner.jpg" alt="9910" width="100%" height="auto"></a>
-
- <p>         
-</p>
+    
      <a href="https://tv.vitaforas.de/9bis9.mp4">
 <img src="https://tv.vitaforas.de/9bis9.jpg" alt="612" width="100%" height="auto"></a>
 Musik
@@ -563,8 +557,7 @@ Nachdem Thomas dem Labyrinth entkommen ist und die Brandwüste durchquert hat, s
 </p>
 
 <ul>
-     <li><a href="https://tv.vitaforas.de/https://youtu.be/jrB00ojtrVM?si=75kIisPoVsOjlHBn">
-<img src="https://tv.vitaforas.de/Teich.jpg" alt="13" width="50" height="60"></a>
+     <li>
 
  <p>         
 </p>
@@ -657,7 +650,12 @@ Musik
 </p>     
      </ul>
 
+<a href="https://tv.vitaforas.de/https://youtu.be/jrB00ojtrVM?si=75kIisPoVsOjlHBn">
+<img src="https://tv.vitaforas.de/Teich.jpg" alt="13" width="100%" height="auto"></a>
 
+
+ <p>         
+</p>   
 
 <iframe width="100%" height="auto"
 src="https://www.youtube.com/embed/videoseries?si=lVZjTO-xRZCOQy3g&amp;list=PLZaVpjEYPtZVG1ipxyd8vbI71Y3omq3z6&autoplay=0"frameborder="0"
