Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -387,8 +387,6 @@ Die Social-Media-Influencerin Madison ist auf einem Solo-Backpacking-Trip in Tha
 
 Serien:
 
- <p>         
-</p>
 <ul>
      <li><a href="https://tv.vitaforas.de/spy.mp4">
 <img src="https://tv.vitaforas.de/spy.jpg" alt="31" width="100%" height="auto"></a>
@@ -410,13 +408,13 @@ Robert Bilott ist seit kurzem Partner in einer renommierten Anwaltskanzlei in Ci
  <p>         
 </p>
      <a href="https://tv.vitaforas.de/fut.mp4">
-<img src="https://tv.vitaforas.de/fut.jpg" alt="2" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/fut.jpg" alt="2" width="100%" height="auto"></a>
 
      <a href="https://tv.vitaforas.de/video2.mp4">
-<img src="https://tv.vitaforas.de/bildname2.jpg" alt="2" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/bildname2.jpg" alt="2" width="100%" height="auto"></a>
 
      <a href="https://tv.vitaforas.de/video3.mp4">
-<img src="https://tv.vitaforas.de/bildname1.jpg" alt="1" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/bildname1.jpg" alt="1" width="100%" height="auto"></a>
 
      
  <p>         
@@ -424,6 +422,7 @@ Robert Bilott ist seit kurzem Partner in einer renommierten Anwaltskanzlei in Ci
 
      <a href="https://tv.vitaforas.de/aang.mp4">
 <img src="https://tv.vitaforas.de/aang.jpg" alt="35" width="100%" height="auto"></a>
+
 Der Avatar Aang ist der Einzige seiner Generation, der es vermag, die vier Elemente zu beherrschen und damit für Frieden unter den entsprechenden vier Nationen zu sorgen. Die Legende von Aang nimmt ihren Anfang, als Aang eines Tages spurlos verschwindet und die kriegerische Nation des Feuers die anderen Nationen zu unterdrücken beginnt.Hundert Jahre später finden die junge Wasserbändigerin Katara und ihr Bruder Sokka ein mysteriöses Kind, eingefroren im ewigen Eis. Es ist eben jener jahrzentelang verschollene Avatar in Gestalt des zwölfjährigen Jungen Aang. Alle Hoffnung liegt nun auf ihm, dem letzten Luftbändiger, der nun endlich seiner Bestimmung entgegengehen kann. Kann Aang die drohende Weltherrschaft des Feuerlords Ozai aufhalten?
 
  <p>         
@@ -446,6 +445,7 @@ Why!Ask:
 <ul>
      <li><a href="https://tv.vitaforas.de/terminal.mp4">
 <img src="https://tv.vitaforas.de/terminal.jpg" alt="37" width="100%" height="auto"></a>
+
 Zwei Auftragskiller (Dexter Fletcher und Max Irons) machen sich sofort an die Arbeit, als sie einen mörderischen Auftrag mit Aussicht auf ein besonders fettes Gehalt erhalten. Während ihrer blutigen Mission treffen sie nachts in einem Diner auf die energiegeladene Kellnerin Annie (Margot Robbie), die tiefer in die ganze Sache verwickelt ist, als ihnen auf Anhieb klar wird. Aber auch mit dem suizidgefährdeten Gast Bill (Simon Pegg) treibt Annie an einem späteren Abend ein perfides Spiel. Und was hat der merkwürdige Hausmeister Clinton (Mike Myers) mit der ganzen Sache zu tun, der Annies manipulative Aktionen stets genüsslich beobachtet?
 
  <p>         
@@ -562,26 +562,12 @@ Nachdem Thomas dem Labyrinth entkommen ist und die Brandwüste durchquert hat, s
  <p>         
 </p>
      <a href="https://tv.vitaforas.de/fire.mp4">
-<img src="https://tv.vitaforas.de/fire.jpg" alt="14" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/fire.jpg" alt="14" width="100%" height="auto"></a>
 
  <p>         
 </p>
      <a href="https://tv.vitaforas.de/inside.mp4">
-<img src="https://tv.vitaforas.de/inside.jpg" alt="24" width="50" height="60"></a>
-
-
- <p>         
-</p>
-     <a href="https://tv.vitaforas.de/matrix.mp4">
-<img src="https://tv.vitaforas.de/matrix.jpg" alt="23" width="50" height="60"></a>
-
- <p>         
-</p>
-     <a href="https://tv.vitaforas.de/moonfall.mp4">
-<img src="https://tv.vitaforas.de/moonfall.jpg" alt="22" width="100%" height="auto"></a>
-
-In diesem Katastrophenfilm von Roland Emmerich befindet sich der Mond mit seinen knapp 3500 Kilometern Durchmesser auf dem unweigerlichen Kollisionskurs mit der Erde. Die ehemalige Astronautin Jo Fowler (Halle Berry) glaubt als einzige, dass sich die drohende Zerstörung der Erde abwenden lässt. Unterstützung bekommt sie lediglich von Astronaut Brian Harper (Patrick Wilson) und Verschwörungstheoretiker K.C. Houseman (John Bradley). Zu dritt reisen sie in den Weltraum, müssen dort jedoch feststellen, dass der Mond nicht das ist, was die Menschheit immer dachte.
-
+<img src="https://tv.vitaforas.de/inside.jpg" alt="24" width="100%" height="auto"></a>
 
  <p>         
 </p>
@@ -640,11 +626,6 @@ Musik
 </p>         
      <a href="https://tv.vitaforas.de/video3.mp4">
 <img src="https://tv.vitaforas.de/bildname1.jpg" alt="1" width="50" height="60"></a>
-
- <p>         
-</p>         
-     <a href="https://tv.vitaforas.de/fred.mp4">
-<img src="https://tv.vitaforas.de/freddy.jpg" alt="27" width="50" height="60"></a>
 
  <p>         
 </p>     
