--- a/index.html
+++ b/index.html
@@ -359,7 +359,43 @@ Ein Auftrag der Assasine Sam gerät außer Kontrolle. Sie muss untertauchen und 
 
 Die Social-Media-Influencerin Madison ist auf einem Solo-Backpacking-Trip in Thailand unterwegs, aber es läuft nicht gut für sie. Als sie CW trifft, die erfahren darin ist alleine zu reisen, wird Madisons Urlaub zuerst besser, die beiden haben eine gute Zeit zusammen. Doch in Influencer - Trau niemanden, dem du folgst nimmt Madisons neue Bekanntschaft schnell groteske Züge an, die gefährlich für die junge Frau werden. 
 
+<a href="http://tv.vitaforas.de/arielle.mp4">
+<img src="http://tv.vitaforas.de/arielle.jpg" alt="1" width="100%" height="auto"></a>
 
+<a href="http://tv.vitaforas.de/grinch2000.mp4">
+<img src="http://tv.vitaforas.de/grinch2000.jpg" alt="1" width="100%" height="auto"></a>
+
+<a href="http://tv.vitaforas.de/grinch2018.mp4">
+<img src="http://tv.vitaforas.de/grinch2018.jpg" alt="1" width="100%" height="auto"></a>
+
+<a href="http://tv.vitaforas.de/demeter.mp4">
+<img src="http://tv.vitaforas.de/demeter.jpg" alt="1" width="100%" height="auto"></a>
+
+<a href="http://tv.vitaforas.de/aqua.mp4">
+<img src="http://tv.vitaforas.de/aqua.jpg" alt="1" width="100%" height="auto"></a>
+
+
+<a href="http://tv.vitaforas.de/cop.mp4">
+<img src="http://tv.vitaforas.de/cop.jpg" alt="1" width="100%" height="auto"></a>
+
+
+<a href="http://tv.vitaforas.de/ely.mp4">
+<img src="http://tv.vitaforas.de/ely.jpg" alt="1" width="100%" height="auto"></a>
+
+<a href="http://tv.vitaforas.de/star.mp4">
+<img src="http://tv.vitaforas.de/star.png" alt="1" width="100%" height="auto"></a>
+
+
+
+<a href="http://tv.vitaforas.de/fam.mp4">
+<img src="http://tv.vitaforas.de/fam.jpg" alt="1" width="100%" height="auto"></a>
+
+THE FAMILY PLAN
+United States of America, 2023, 119 min
+Filme / Action / Comedy / Kinofilme
+16+
+
+Autoverkäufer Dan (Mark Wahlberg) genießt ein ruhiges Leben in der Vorstadt als liebender Ehemann und Vater. Doch das ist nur ein Teil seines Lebenslaufs, denn einige Jahre zuvor war er als hochqualifizierter Agent tätig, der brisante Aufträge in Namen der US-Regierung erledigte. Ehefrau Jessica (Michelle Monaghan), Teenagertochter Nina (Zoe Margaret Colletti) und Sohn Kyle (Van Crosby) wissen von Dans Vorgeschichte allerdings nichts. Als eines Tages alte Feinde aus seiner geheimen Vergangenheit auftauchen, packt er seine Familie kurzerhand in einen Minivan und bricht mit ihr zu einem Roadtrip quer durchs Land nach Las Vegas auf. Dan ist fest entschlossen, sie vor den gefährlichen Verfolgern zu beschützen und ihnen allen gleichzeitig den Urlaub ihres Lebens zu bieten. Während der Reise sieht er sich jedoch mehrfach dazu gezwungen, seine lange verschütteten Fähigkeiten als Elitekiller wieder einzusetzen – ohne dabei vor seinen Liebsten seine wahre Identität zu enthüllen.
  <p>         
 </p>
      <a href="https://tv.vitaforas.de/Tides2021.mp4">
@@ -819,12 +855,42 @@ Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, W
 
  <p>         
 </p>
+<a href="http://tv.vitaforas.de/wish.mp4">
+<img src="http://tv.vitaforas.de/wish.jpg" alt="1" width="100%" height="auto"></a>
+
+ <p>         
+</p>
+
+<a href="http://tv.vitaforas.de/drachen.mp4">
+<img src="http://tv.vitaforas.de/drachen.jpg" alt="1" width="100%" height="auto"></a>
+
+
+ <p>         
+</p>
+
+<a href="http://tv.vitaforas.de/sammy.mp4">
+<img src="http://tv.vitaforas.de/sammy.jpg" alt="1" width="100%" height="auto"></a>
+
+ <p>         
+</p>
+<a href="http://tv.vitaforas.de/scoob.mp4">
+<img src="http://tv.vitaforas.de/scoob.jpg" alt="1" width="100%" height="auto"></a>
+ <p>         
+</p>
+
+<a href="http://tv.vitaforas.de/trolls.mp4">
+<img src="http://tv.vitaforas.de/trolls.jpg" alt="1" width="100%" height="auto"></a>
+
+ <p>         
+</p>
      <a href="https://tv.vitaforas.de/momo.mp4">
 <img src="https://tv.vitaforas.de/momo.jpg" alt="10" width="100%" height="auto"></a>
 </li>
 
 Momo (1986 ‧ Fantasy/Kinderfilm)
 
+ <p>         
+</p>
 Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem riesigen Amphitheater und hat viele Freunde. Doch eines Tages hat niemand mehr Zeit. Alle sind von der Idee besessen, ungenutzte Zeit für ein längeres Leben zu sparen. Mysteriöse graue Herren mit Aktenkoffern wollen den Menschen mit verklausulierten Verträgen die Zeit stehlen und diese für ihre eigenen Zwecke benutzen. Mit Hilfe ihrer Schildkröte und einer Stundenblume stellt Momo sich den Zeitdieben entgegen.
  <p>         
 </p>
