Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -883,8 +883,11 @@ Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem 
 <img src="https://tv.vitaforas.de/ninja.jpg" alt="1" width="100%" height="auto"></a>
 
 
+ <p>         
+</p>
+    Mail: kontakt@vitaforas.de 
 
-<p> Mail: kontakt@vitaforas.de
+<p> 
 </p>  
 
 
