Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -476,12 +476,7 @@ Flucht ins 23. Jahrhundert (1976 ‧ Sci-Fi/Action)
 </p>
 Das Jahr 2274 wirkt auf den ersten Blick idyllisch - es gibt nur einen Haken: die Lebensdauer ist begrenzt. Ein Computer überwacht die Einwohner, sobald jemand das 30. Lebensalter erreicht, wird sein Leben in einer quasi-religiösen Zeremonie ausgelöscht. Nicht jeder gibt sich mit dieser Regelung zufrieden.
 
-     <a href="https://tv.vitaforas.de/here.mp4">
-<img src="https://tv.vitaforas.de/here.jpg" alt="2" width="100%" height="auto"></a>
-
-     <a href="https://tv.vitaforas.de/solas.mp4">
-<img src="https://tv.vitaforas.de/solas.jpg" alt="2" width="100%" height="auto"></a>
-
+  
    </li>
      </ul>
 
@@ -501,6 +496,7 @@ Sci-Fi:
      <li><a href="https://tv.vitaforas.de/f.mp4">
 <img src="https://tv.vitaforas.de/f.jpg" alt="7" width="50" height="60"></a>
 
+Serie: Futurama
  <p>         
 </p>
      <a href="https://tv.vitaforas.de/gate.mp4">
@@ -521,17 +517,28 @@ Zwei Surrogates werden vor einem Nachtclub zerstört. Die Behörden stufen den V
 
  <p>         
 </p>
-     <a href="https://tv.vitaforas.de/matrix.mp4">
-<img src="https://tv.vitaforas.de/matrix.jpg" alt="2" width="50" height="60"></a>
+    
      <a href="https://tv.vitaforas.de/fut.mp4">
-<img src="https://tv.vitaforas.de/fut.jpg" alt="2" width="50" height="60"></a>
+<img src="https://tv.vitaforas.de/fut.jpg" alt="2" width="100%" height="auto"></a>
 
+Serie: Futurama
  <p>         
 </p>
     
      <a href="https://tv.vitaforas.de/9bis9.mp4">
 <img src="https://tv.vitaforas.de/9bis9.jpg" alt="612" width="100%" height="auto"></a>
+
 Musik
+
+   <a href="https://tv.vitaforas.de/here.mp4">
+<img src="https://tv.vitaforas.de/here.jpg" alt="2" width="100%" height="auto"></a>
+
+Musik
+     <a href="https://tv.vitaforas.de/solas.mp4">
+<img src="https://tv.vitaforas.de/solas.jpg" alt="2" width="100%" height="auto"></a>
+
+Musik
+
 </li>
 
  <p>         
@@ -648,10 +655,6 @@ Musik
  <p>         
 </p>     
      </ul>
-
-<a href="https://tv.vitaforas.de/https://youtu.be/jrB00ojtrVM?si=75kIisPoVsOjlHBn">
-<img src="https://tv.vitaforas.de/Teich.jpg" alt="13" width="100%" height="auto"></a>
-
 
  <p>         
 </p>   
