Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ In einer futuristischen Welt, in der Roboter die Polizeiarbeit übernehmen, erre
      <a href="https://tv.vitaforas.de/five.mp4">
 <img src="https://tv.vitaforas.de/five.png" alt="10" width="100%" height="auto"></a>
 
-
+Überlebst du fünf Nächte in "Freddy Fazbear's Pizza"? Aus dem schockierenden Horror-Game-Phänomen wird jetzt eine Horrorperle, die dem Publikum das Blut in den Adern gefrieren lässt.Mike Schmidt tritt bei "Freddy Fazbear's Pizza!" einen Posten als Nachtwächter an. Doch gleich im Verlauf der ersten Nacht muss er erkennen, dass die Nachtschicht in dem verlassenen Restaurant alles andere als ruhig werden wird.
  <p>         
 </p>   
 
@@ -265,12 +265,6 @@ Obwohl er bereits beachtliche Erfolge für sich verbuchen konnte und es auch fam
      
      <a href="https://tv.vitaforas.de/world.mp4">
 <img src="https://tv.vitaforas.de/world.jpg" alt="62" width="100%" height="auto"></a>
-
- <p>         
-</p>
-     
-     <a href="https://tv.vitaforas.de/grinch.mp4">
-<img src="https://tv.vitaforas.de/grinch.jpg" alt="41" width="100%" height="auto"></a>
 
  <p>         
 </p>
@@ -366,7 +360,7 @@ Die Social-Media-Influencerin Madison ist auf einem Solo-Backpacking-Trip in Tha
 
 <a href="http://tv.vitaforas.de/star.mp4">
 <img src="http://tv.vitaforas.de/star.png" alt="1" width="100%" height="auto"></a>
-
+Star Trek: Lower Decks IV
 
 
 <a href="http://tv.vitaforas.de/fam.mp4">
@@ -427,7 +421,7 @@ Robert Bilott ist seit kurzem Partner in einer renommierten Anwaltskanzlei in Ci
 </p>
      <a href="https://tv.vitaforas.de/fut.mp4">
 <img src="https://tv.vitaforas.de/fut.jpg" alt="2" width="100%" height="auto"></a>
-
+Serie: Futurama 
      <a href="https://tv.vitaforas.de/video2.mp4">
 <img src="https://tv.vitaforas.de/bildname2.jpg" alt="2" width="100%" height="auto"></a>
 
@@ -443,11 +437,6 @@ Robert Bilott ist seit kurzem Partner in einer renommierten Anwaltskanzlei in Ci
 
 Der Avatar Aang ist der Einzige seiner Generation, der es vermag, die vier Elemente zu beherrschen und damit für Frieden unter den entsprechenden vier Nationen zu sorgen. Die Legende von Aang nimmt ihren Anfang, als Aang eines Tages spurlos verschwindet und die kriegerische Nation des Feuers die anderen Nationen zu unterdrücken beginnt.Hundert Jahre später finden die junge Wasserbändigerin Katara und ihr Bruder Sokka ein mysteriöses Kind, eingefroren im ewigen Eis. Es ist eben jener jahrzentelang verschollene Avatar in Gestalt des zwölfjährigen Jungen Aang. Alle Hoffnung liegt nun auf ihm, dem letzten Luftbändiger, der nun endlich seiner Bestimmung entgegengehen kann. Kann Aang die drohende Weltherrschaft des Feuerlords Ozai aufhalten?
 
- <p>         
-</p>
-
-     <a href="https://tv.vitaforas.de/f.mp4">
-<img src="https://tv.vitaforas.de/f.jpg" alt="36" width="50" height="60"></a></li>
      </ul>
 
 
@@ -631,12 +620,13 @@ Weit draußen in der Öde der Galaxis kreist eine gelbe Sonne um einen unbedeute
 </p>     
      <a href="https://tv.vitaforas.de/fut.mp4">
 <img src="https://tv.vitaforas.de/fut.jpg" alt="26" width="50" height="60"></a>
-
+Serie: Futurama 
  <p>         
 </p>         
      <a href="https://tv.vitaforas.de/f.mp4">
 <img src="https://tv.vitaforas.de/f.jpg" alt="2" width="50" height="60"></a>
 
+Serie: Futurama 
  <p>         
 </p>         
      <a href="https://tv.vitaforas.de/here.mp4">
@@ -868,6 +858,15 @@ Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, W
 
  <p>         
 </p>
+
+<a href="https://tv.vitaforas.de/grinch.mp4">
+<img src="https://tv.vitaforas.de/grinch.jpg" alt="41" width="100%" height="auto"></a>
+
+
+ <p>         
+</p>
+
+
 <a href="http://tv.vitaforas.de/grinch2000.mp4">
 <img src="http://tv.vitaforas.de/grinch2000.jpg" alt="1" width="100%" height="auto"></a>
 
