Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -222,9 +222,8 @@ In einer futuristischen Welt, in der Roboter die Polizeiarbeit übernehmen, erre
 </p>   
 
      <a href="https://tv.vitaforas.de/finest.mp4">
-<img src="https://tv.vitaforas.de/finest.jpg" alt="10" width="45%" height="auto"></a>
+<img src="https://tv.vitaforas.de/fine.jpg" alt="10" width="100%" height="auto"></a>
 
-<img src="https://zero.vitaforas.de/fine.jpg" alt="10" width="45%" height="auto"></a>
 </li>
 
 Die Halbbrüder Tom (Ben Foster) und Charlie (Toby Wallace) haben seit Jahrzehnten nicht mehr miteinander gesprochen und sind in unterschiedlichen Welten aufgewachsen. Eines Tages vertraut ihr Vater Ray (Tommy Lee Jones) ihnen jedoch sein Fischerboot im Hafen Bostons an und die beiden begeben sich auf eine lukrativ erscheinende Fahrt, die sie jedoch illegalerweise in kanadische Fanggründe führt. Als die Küstenwache sie erwischt, wird Papas Boot, die „Finestkind“, beschlagnahmt und kann nur gegen die Zahlung einer Kaution von 100.000 US-Dollar wieder ausgelöst werden. So viel Geld haben die Halbbrüder nicht, was sie dazu bringt, den Plan von Charlies neuer Freundin Mabel (Jenna Ortega) aufzugreifen. Der ist allerdings alles andere als ungefährlich, sollen Tom und Charlie doch Rauschgift für eine Bande zwielichtiger Gestalten über den Ozean zu seinem Bestimmungsort schmuggeln.
