Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ In einer futuristischen Welt, in der Roboter die Polizeiarbeit übernehmen, erre
 </p>   
 
      <a href="https://tv.vitaforas.de/finest.mp4">
-<img src="https://tv.vitaforas.de/fine.jpg" alt="10" width="100%" height="auto"></a>
+<img src="https://zero.vitaforas.de/fine.jpg" alt="10" width="100%" height="auto"></a>
 
 </li>
 
