Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -346,26 +346,45 @@ Ein Auftrag der Assasine Sam gerät außer Kontrolle. Sie muss untertauchen und 
 
 Die Social-Media-Influencerin Madison ist auf einem Solo-Backpacking-Trip in Thailand unterwegs, aber es läuft nicht gut für sie. Als sie CW trifft, die erfahren darin ist alleine zu reisen, wird Madisons Urlaub zuerst besser, die beiden haben eine gute Zeit zusammen. Doch in Influencer - Trau niemanden, dem du folgst nimmt Madisons neue Bekanntschaft schnell groteske Züge an, die gefährlich für die junge Frau werden. 
 
+ <p>         
+</p>
 
 <a href="http://tv.vitaforas.de/demeter.mp4">
 <img src="http://tv.vitaforas.de/demeter.jpg" alt="1" width="100%" height="auto"></a>
 
+Der Besatzung des Schiffs Demeter steht ein ungewöhnlicher Auftrag bevor: Fünfzig Holzkisten sollen sie von den Karpaten nach London transportieren. Fünfzig Holzkisten, von denen niemand weiß, was sie enthalten. Es dauert nicht lange, bis sich merkwürdige Geschehnisse auf der Reise häufen. Kann es wirklich sein, dass eine mysteriöse Gestalt ohne Gnade das Schiff und seine Mannschaft heimsucht? Wird die Demeter es nach London schaffen und falls ja - wer wird die Reise überleben?
+
+
+ <p>         
+</p>
+
 <a href="http://tv.vitaforas.de/aqua.mp4">
 <img src="http://tv.vitaforas.de/aqua.jpg" alt="1" width="100%" height="auto"></a>
+
+In Aquaman and the Lost Kingdom geht es mit den Abenteuern vom König von Atlantis weiter: Er muss sich vor David Kane, alias Black Manta, einem skrupellosen Piraten, in Acht nehmen. Kane will sich an Aquaman für den Tod seines Vater rächen.
+
+<p>         
+</p>
 
 
 <a href="http://tv.vitaforas.de/cop.mp4">
 <img src="http://tv.vitaforas.de/cop.jpg" alt="1" width="100%" height="auto"></a>
 
 
+<p>         
+</p>
 <a href="http://tv.vitaforas.de/ely.mp4">
 <img src="http://tv.vitaforas.de/ely.jpg" alt="1" width="100%" height="auto"></a>
 
+<p>         
+</p>
 <a href="http://tv.vitaforas.de/star.mp4">
 <img src="http://tv.vitaforas.de/star.png" alt="1" width="100%" height="auto"></a>
 Star Trek: Lower Decks IV
 
 
+<p>         
+</p>
 <a href="http://tv.vitaforas.de/fam.mp4">
 <img src="http://tv.vitaforas.de/fam.jpg" alt="1" width="100%" height="auto"></a>
 
@@ -373,6 +392,9 @@ THE FAMILY PLAN
 United States of America, 2023, 119 min
 Filme / Action / Comedy / Kinofilme
 16+
+
+<p>         
+</p>
 
 Autoverkäufer Dan (Mark Wahlberg) genießt ein ruhiges Leben in der Vorstadt als liebender Ehemann und Vater. Doch das ist nur ein Teil seines Lebenslaufs, denn einige Jahre zuvor war er als hochqualifizierter Agent tätig, der brisante Aufträge in Namen der US-Regierung erledigte. Ehefrau Jessica (Michelle Monaghan), Teenagertochter Nina (Zoe Margaret Colletti) und Sohn Kyle (Van Crosby) wissen von Dans Vorgeschichte allerdings nichts. Als eines Tages alte Feinde aus seiner geheimen Vergangenheit auftauchen, packt er seine Familie kurzerhand in einen Minivan und bricht mit ihr zu einem Roadtrip quer durchs Land nach Las Vegas auf. Dan ist fest entschlossen, sie vor den gefährlichen Verfolgern zu beschützen und ihnen allen gleichzeitig den Urlaub ihres Lebens zu bieten. Während der Reise sieht er sich jedoch mehrfach dazu gezwungen, seine lange verschütteten Fähigkeiten als Elitekiller wieder einzusetzen – ohne dabei vor seinen Liebsten seine wahre Identität zu enthüllen.
  <p>         
