Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -405,8 +405,9 @@ Autoverkäufer Dan (Mark Wahlberg) genießt ein ruhiges Leben in der Vorstadt al
  <p>         
 </p>
      <a href="https://tv.vitaforas.de/Tides2021.mp4">
-<img src="https://tv.vitaforas.de/tides.jpg" alt="16" width="100%" height="auto"></a>
+<img src="https://tv.vitaforas.de/tide.jpg" alt="16" width="100%" height="auto"></a>
 
+Als die Erde für den Menschen unbewohnbar wurde, besiedelte die herrschende Elite den Planeten Kepler 209. Doch seine Atmosphäre macht die neuen Bewohner unfruchtbar. Zwei Generationen später soll ein Programm feststellen, ob Leben auf der Erde wieder möglich ist: Mission Ulysses II soll Gewissheit bringen. Die Raumkapsel gerät beim Eintritt in die Erdatmosphäre außer Kontrolle. Die Astronautin Blake überlebt die Landung als Einzige – doch sie muss feststellen, dass sie auf der Erde nicht alleine ist. Ein Überlebenskampf beginnt, und Blake muss Entscheidungen treffen, die das Schicksal der ganzen Menschheit bestimmen werden.
      <a href="https://tv.vitaforas.de/panem.mp4">
 <img src="https://tv.vitaforas.de/panem.jpg" alt="17" width="100%" height="auto"></a>
 
