Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ Der Besatzung des Schiffs Demeter steht ein ungewöhnlicher Auftrag bevor: Fünf
 </p>
 
 <a href="http://tv.vitaforas.de/aqua.mp4">
-<img src="http://tv.vitaforas.de/aqua.jpg" alt="1" width="100%" height="auto"></a>
+<img src="http://tv.vitaforas.de/los.jpg" alt="1" width="100%" height="auto"></a>
 
 In Aquaman and the Lost Kingdom geht es mit den Abenteuern vom König von Atlantis weiter: Er muss sich vor David Kane, alias Black Manta, einem skrupellosen Piraten, in Acht nehmen. Kane will sich an Aquaman für den Tod seines Vater rächen.
 
