--- a/index.html
+++ b/index.html
@@ -410,12 +410,6 @@ Autoverkäufer Dan (Mark Wahlberg) genießt ein ruhiges Leben in der Vorstadt al
 
 Als die Erde für den Menschen unbewohnbar wurde, besiedelte die herrschende Elite den Planeten Kepler 209. Doch seine Atmosphäre macht die neuen Bewohner unfruchtbar. Zwei Generationen später soll ein Programm feststellen, ob Leben auf der Erde wieder möglich ist: Mission Ulysses II soll Gewissheit bringen. Die Raumkapsel gerät beim Eintritt in die Erdatmosphäre außer Kontrolle. Die Astronautin Blake überlebt die Landung als Einzige – doch sie muss feststellen, dass sie auf der Erde nicht alleine ist. Ein Überlebenskampf beginnt, und Blake muss Entscheidungen treffen, die das Schicksal der ganzen Menschheit bestimmen werden.
 
-<p>         
-</p>         
-
-     <a href="https://tv.vitaforas.de/panem.mp4">
-<img src="https://tv.vitaforas.de/panem.jpg" alt="17" width="100%" height="auto"></a>
-
      </li>
      </ul>
 
@@ -439,6 +433,7 @@ Serien:
      <li><a href="https://tv.vitaforas.de/spy.mp4">
 <img src="https://tv.vitaforas.de/spy.jpg" alt="31" width="100%" height="auto"></a>
 
+Susan Cooper ist eine bescheidene CIA-Analystin, die ausschließlich am Schreibtisch arbeitet. Auch wenn sie damit für die eigentliche Planung der gefährlichen Missionen des Geheimdienstes verantwortlich ist, sind es die Agenten im Feldeinsatz, die anschließend die Lorbeeren für einen erfolgreich abgeschlossenen Job ernten und Susan bleibt weitgehend unbeachtet. Doch als ihr Partner Bradley Fine den Machenschaften der schönen Raina Boyanov und ihren Strippenziehern im Hintergrund zum Opfer fällt, meldet sich Susan kurzerhand freiwillig für einen heiklen Undercover-Einsatz. Bei diesem soll sie die Organisation eines gefährlichen Waffenhändlers infiltrieren und gleichzeitig wird ihr so die Möglichkeit geboten, Vergeltung für ihren Partner zu üben. In zum Teil unglamourösen Tarnungen, etwa als Katzenliebhaberin aus Iowa, erlebt Susan das Abenteuer ihres Lebens, bei dem sie zur Heldin der gefährlichsten Mission des CIA wird.
  <p>         
 </p>
 
