Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -242,11 +242,18 @@ X-Mas:
 <a href="https://tv.vitaforas.de/jim.mp4">
 <img src="https://tv.vitaforas.de/jim.jpg" alt="47" width="100%" height="auto"></a>
 
+
+Eine Weihnachtsgeschichte ist ein Fantasyfilm aus dem Jahr 2009 von Robert Zemeckis mit Jim Carrey und Steve Valentine.
+
+In Robert Zemeckis "Eine Weihnachtsgeschichte" bekommt (Jim Carrey) Ärger mit Geistern, die er niemals rief.
  <p>         
 </p>
           <a href="https://tv.vitaforas.de/Spirit.mp4">
 <img src="https://tv.vitaforas.de/Spirit.jpg" alt="48" width="100%" height="auto"></a>
 
+Wer kennt sie nicht, die Weihnachtsgeschichte von Charles Dickens? Ein Mann wird von drei Geistern heimgesucht, die ihm zeigen sollen, was er in seinem Leben falsch macht. Aber was passiert, wenn die Geschichte nicht mehr im viktorianischen London spielt, sondern heute? Und was, wenn die Geschichte plötzlich ein Musical ist? Das und mehr gilt es in Spirited herauszufinden.
+
+Spirited ist ein weihnachtlicher Musicalfilm, der von Apple Original Films für den Streamingdienst Apple TV+ produziert wurde. Regie führt Sean Anders, der zusammen mit John Morris auch für das Drehbuch verantwortlich ist. Als moderner Ebenezer Scrooge Clint Briggs ist Ryan Reynolds zu sehen. Will Ferrell spielt einen der drei Geister. In weiteren Rollen sind Octavia Spencer, Broadway-Star Patrick Page und Aimee Carrero zu sehen.
  <p>         
 </p>
           <a href="https://tv.vitaforas.de/wonka.mp4">
