Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -897,15 +897,20 @@ Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, W
  <p>         
 </p>
 
+<a href="http://tv.vitaforas.de/grinch.mp4">
+<img src="http://tv.vitaforas.de/grinch.jpg" alt="1" width="100%" height="auto"></a>
+2019
 
 <a href="http://tv.vitaforas.de/grinch2000.mp4">
 <img src="http://tv.vitaforas.de/grinch2000.jpg" alt="1" width="100%" height="auto"></a>
+2000
 
  <p>         
 </p>
 
 <a href="http://tv.vitaforas.de/grinch2018.mp4">
 <img src="http://tv.vitaforas.de/grinch2018.jpg" alt="1" width="100%" height="auto"></a>
+2018
 
  <p>         
 </p>
