Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -882,12 +882,15 @@ Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, W
 </p>
 <a href="http://tv.vitaforas.de/scoob.mp4">
 <img src="http://tv.vitaforas.de/scoob.jpg" alt="1" width="100%" height="auto"></a>
+
+2002: Emile Mondavarious ist Besitzer eines Vergnügungsparks auf Spooky Island. Da einige Gäste sich in Zombies verwandeln, beauftragt er Mitarbeiter von Mystery, Inc mit der Lösung des Problems.Ein Voodoo-Priester rät Daphne ab, das auf der Insel befindliche Schloss aufzusuchen, doch sie und ihre Freunde tun es trotzdem. Scooby wird dort von einem Dämon angegriffen.Den Freunden werden ihre Seelen geraubt, aber Shaggy findet den Ort, wo die Seelen aufbewahrt werden. Er befreit die Seelen seiner Freunde, die zuerst in die falschen Körper zurückkehren. Eine magische Pyramide bewirkt den Seelentausch bis die Seelen in die richtigen Körper zurückkehren.Scooby-Doo soll von Mondavarious einer dunklen Gottheit geopfert werden. Er betrachtet die Rolle der Opfergabe zuerst als schmeichelhaft. Shaggy und seine Freunde retten ihn.
  <p>         
 </p>
 
 <a href="http://tv.vitaforas.de/trolls.mp4">
 <img src="http://tv.vitaforas.de/trolls.jpg" alt="1" width="100%" height="auto"></a>
 
+Zwei Filme lang waren Poppy und Branch unzertrennlich. In «Trolls – Gemeinsam stark» wird aus den besten Freunden nun endlich offiziell ein Paar. Eines Tages entdeckt Poppy, dass Branch eine geheime Vergangenheit hat: Er war einst mit seinen vier Brüdern Floyd, John Dory, Spruce und Clay Teil der erfolgreichen Boyband BroZone. Die Gruppe löste sich allerdings auf, als Branch noch klein war. Seither hat er seine Brüder nicht mehr gesehen. Als Branchs Bruder Floyd von den beiden Popstar-Bösewichten Velvet und Veneer entführt wird, die es auf sein musikalisches Talent abgesehen haben, begeben sich Branch und Poppy auf eine turbulente Reise, um die BroZone-Brüder wieder zu vereinen – und natürlich haben die Trolls dabei immer den passenden Song parat!
  <p>         
 </p>
 
@@ -929,7 +932,7 @@ Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem 
      <a href="https://tv.vitaforas.de/ninja.mp4">
 <img src="https://tv.vitaforas.de/ninja.jpg" alt="1" width="100%" height="auto"></a>
 
-
+Die Turtle-Brüder versuchen, sich die Liebe von New York City zu verdienen, während sie sich einer Armee von Mutanten entgegenstellen.
  <p>         
 </p>
     Mail: kontakt@vitaforas.de 
